Closed Bug 459329 Opened 16 years ago Closed 16 years ago

Download Manager won't compile without Vista SDK

Categories

(Toolkit :: Downloads API, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: neil, Assigned: neil)

References

Details

Attachments

(1 file)

If you're using the MingW compiler then the download scanner is automatically excluded but --disable-vista-sdk-requirements does not have any effect.
Attached patch Proposed patchSplinter Review
I also simplified the defines as they were getting out of hand.
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #342522 - Flags: review?(sdwilsh)
Comment on attachment 342522 [details] [diff] [review]
Proposed patch

r=sdwilsh
Attachment #342522 - Flags: review?(sdwilsh) → review+
Pushed changeset 3f06978bdc9e to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 462621, 463855
Target Milestone: --- → mozilla1.9.1b2
Version: unspecified → Trunk
No longer depends on: 463855
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: