Bug 459329 Download Manager should honour --disable-vista-sdk-requirements r=sdwilsh